--- a/gb/23/8/26/n14061574.md
+++ b/gb/23/8/26/n14061574.md
@@ -14,10 +14,6 @@
 <p>本次会议安排多项精彩的讲座，校园长们以创新的思维，思考如何以影响力为取向来治理学校；中华台北特奥会理事长李锡津以一个特殊家庭的生命故事，来讨论融合教育的重要性；另外也有符合SDGs第13项气候行动及第14项保育海洋与海洋资源两项指标的讲座，让大家重视地球所面临的严峻困境，希望藉由教育的力量，能改变未来，让地球生命永续。</p>
 <p>嘉义市连续两年在全国县市施政满意度调查中蝉联大满贯，在教育品质上也连续4年获得金牌，显见嘉义市的教育品牌傲视全台。后疫情时代的来临、新课纲的执行，学习已经完全跳脱了想像，也增加教育的挑战性、变动性和复杂性，此次校园长会议“教育影响力+1：迈向永续的学校治理”，提供校园长们为嘉义市永续教育努力的方向，让嘉义市的孩子拥有创造未来，改变世界的力量，为社会发展作出贡献。把教育板块经营得更扎实是全体<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%95%99%E8%82%B2%E5%B7%A5%E4%BD%9C%E8%80%85.md#1">教育工作者</a>的期望。</p>
 <p>责任编辑：玉珍</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/6/n13879628.md#1">安省教育工作者接受省府协议 四大工会或跟进</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/11/n13882842.md#1">安省再与教育工作者委员会达成临时协议</a></li>
@@ -25,41 +21,34 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059612.md#1">全嘉动起来“勇壮嘉义队”报名征选开跑</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060076.md#1">亚青七度来嘉义演出 45组家庭接待四天三夜</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14061156.md#1">2023嘉义市购物节登录金额破二亿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061516.md#1">祖父母节庆典长者活力展现 祖孙情深共襄盛会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061493.md#1">斗六运动城市杯全国槌球锦标赛齐聚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061496.md#1">总统蔡英文由市长黄敏惠偕同访视嘉义旧监</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061410.md#1">县长化身LISA姐姐 体验一日店员 呼吁支持身障朋友</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137753.md#1">屏东杀蛇溪水质净化场启用 去污率达7成</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137759.md#1">2023空气软枪全国冠军赛 屏县立体育馆登场</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137762.md#1">扶轮之子认养捐赠 屏东96名学子受惠</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137678.md#1">农业部第3届十大绿色照顾 在斗南举办颁奖典礼</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/6/n11167928.md#1" target="_blank">林辉：寿则多辱 鲁迅之弟周作人凄惨中死去</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/16/n11262985.md#1" target="_blank">一份传单圆梦 罗马青年吁中国人脱离暴政</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/7/31/n10602910.md#1" target="_blank">【还原史实】“三反五反”掠夺企业主 引爆自杀潮</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/12/12/28/n3763495.md#1" target="_blank">洪愿：告诉你真实的法轮功（一）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057320.md#1">在高空目击UFO 美航空公司机长拍下画面</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/9/n14051156.md#1">带你认识六大茶系</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058703.md#1">二十四节气：秋天的第二个节气为何称“处暑”?</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056411.md#1">七夕情话响千代  天神护祐得真福</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058486.md#1">真实的宋代爱情故事：比苏东坡还深情，“瞎了我也爱你”的刘庭式</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14061178.md#1">【拍案惊奇】中共下令要“后继有人”4人受关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060823.md#1">【未解之谜】“罗刹海市”中的聊斋故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14061352.md#1">【新唐人快报】川普重回推特了 人气爆棚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058159.md#1">组图：一只被遗弃的流浪狗获救后面目一新</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14059943.md#1">习近平随从在金砖峰会上被安保拦截 视频曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060120.md#1">岳山：习近平的面相、权力与生死</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059682.md#1">帮AKIRA庆祝42岁 林志玲甜喊：Baby生日快乐</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060629.md#1">宁静曝行业乱象：没几个导演敢用演技好的演员</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059901.md#1">离婚一年半突吐心声 杨颖：不太喜欢七夕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060675.md#1">梁朝伟回应私生子传闻 自曝与刘嘉玲婚姻现况</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059861.md#1">伊能静七夕另类秀恩爱 调侃秦昊送巨型玫瑰花</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059503.md#1">不用除草剂 专家教你如何迅速除去杂草</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059650.md#1">抗氧化“水果皇后”荔枝 这样吃防过敏、中毒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060194.md#1">美国空姐透露 乘客打包行李会犯的最大错误</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059229.md#1">新变种EG.5传播不受控 预计冬季更广泛 重在预防</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060846.md#1">如何减少痛感？ 美CIA解密文件曝生活秘技</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14129958.md#1">威赫西域的汉宣帝 一道柔情诏书显露夫妻的恩义</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14133709.md#1">【未解之谜】《推背图》47象 紫薇圣人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14131208.md#1">莫愁女 诗歌里永不老去的佳人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127127.md#1">奉天命助圣王治世 百日为相白马化龙（上）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/21/n13594978.md#1">【器乐独奏与协奏曲】布鲁赫《苏格兰幻想曲》，作品第46号</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137533.md#1">【车评】最实惠欧洲SUV  2024 Volkswagen Atlas SEL Premium R-Line</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137659.md#1">【全球新闻】大陆医生：中共病毒感染爆发式增长</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136995.md#1">【中国禁闻】亲信旧部纷被抓 赵乐际遭围剿？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136615.md#1">中共央视新闻播出辱习画面 后紧急删除</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135839.md#1">很梦幻？Costco新版购物车引发会员热议</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135801.md#1">周海媚死讯不断反转 堪称现实版《新闻女王》</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136609.md#1">范冰冰竹林虎啸礼服入选CNN十大红毯造型</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135870.md#1">10年前拍完未播 周海媚遗作遭拍卖原因曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136694.md#1">解约香港无线4个月 王晶之女王子涵曝新动向</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14135921.md#1">与周海媚合演《倚天屠龙记》 马景涛写信悼念</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：儿童专属梦幻公主帐篷 63%折扣</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">FIJI天然自流瓶装水 不含8 种主要过敏原</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135019.md#1">苹果防糖尿病、阻癌细胞扩散 品种、吃法全攻略</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/1/n14128227.md#1">掉发怎么办？中医6招教你长回浓密秀发</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136611.md#1">已逝明星患的是终生疾病？关于红斑狼疮一篇看懂</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/26/n14061574.htm">嘉市112学年度中小学暨幼儿园校园长会议</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061574.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
