--- a/gb/23/8/27/n14061878.md
+++ b/gb/23/8/27/n14061878.md
@@ -15,10 +15,6 @@
 <p>市府观光新闻处处长张婉芬也表示，疫情对全台民生经济造成巨大冲击，市府在严峻疫情考验下即使松绑也不松懈，持续落实防疫，让市民安心。观光新闻处加大推广国旅力道，加码推出4,000万元国内团体旅游补助、推出“100+Select 嘉市潮选店”、持续地提升兰潭周边的观光游憩品质等，吸引全国游客来到嘉义市感受小城魅力，反映在相关统计数据上也是十分亮眼。</p>
 <p>张婉芬处长指出，据交通部观光局台湾旅宿网统计，111年嘉义市旅宿业住宿人次超过184万人次，创下历史新高；112年累计1至6月住宿业的营利事业销售额也重现破十亿佳绩，逾12亿7378万元，较111年同期成长近44%。嘉义市今年下半年强档活动不断，除了“嘉义市购物节”，城市IP“光织影舞-光影艺术展”将于9月29至10月10日闪亮登场，光辉十月还有粉红超跑-白沙屯妈祖来嘉赞境、摇滚音乐祭、开嘉市集接力演出，年底则有众所期盼的嘉义市国际管乐节及诸罗山杯国际少棒邀请赛，丰富多元的活动将持续为经济注入活力，与全民一同携手再创“嘉”绩。</p>
 <p>责任编辑：玉珍</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/5/n13878995.md#1">台主计总处：全民健保收支入不敷出</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928938.md#1">主计总处：1月租金指数历年新高 南部涨势最多</a></li>
@@ -27,40 +23,33 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057400.md#1">嘉义双潭星光路跑 五千人写出绝美城市夜景</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058747.md#1">建构友善校园 嘉义市校园心灵健康活动开跑</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059612.md#1">全嘉动起来“勇壮嘉义队”报名征选开跑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061931.md#1">家扶助学希望工程 鼓舞弱势学子勇于求学</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061942.md#1">梦想背包客驻点屏东原乡 助部落长者圆梦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061946.md#1">宣信国小致力推动永续教育获台湾首届双奖</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137753.md#1">屏东杀蛇溪水质净化场启用 去污率达7成</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137759.md#1">2023空气软枪全国冠军赛 屏县立体育馆登场</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137762.md#1">扶轮之子认养捐赠 屏东96名学子受惠</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/15/n10785014.md#1" target="_blank">共产暴政录：镇压“反革命”运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/11/20/n4014880.md#1" target="_blank">修炼人的故事：从地狱到天堂</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/10/25/n9768373.md#1" target="_blank">北京女三中第一个共产党员的悲剧人生</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/12/8/9/n3655381.md#1" target="_blank">揭秘：中共诬陷法轮功是这样编出来的</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058703.md#1">二十四节气：秋天的第二个节气为何称“处暑”?</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058486.md#1">真实的宋代爱情故事：比苏东坡还深情，“瞎了我也爱你”的刘庭式</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058222.md#1">【未解之谜】朵洛莉丝催眠故事（1）昴宿星人移民地球？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060823.md#1">【未解之谜】“罗刹海市”中的聊斋故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14057973.md#1">天道有知：谁来当城隍爷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061556.md#1">【车评】有IQ的高智能SUV 2023 Volkswagen Tiguan SEL R-Line</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061718.md#1">【时事金扫描】川普被拍监狱照 福岛核废水秘密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061762.md#1">【马克时空】美日韩首脑峰会 三国军力整合备战</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060868.md#1">【中国观察】中共为何推退休干部回乡定居？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14061014.md#1">中共炒作日本排核废水话题 专家：政治操弄</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060894.md#1">【翻墙必看】金砖峰会 习近平失措神情迷惘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060675.md#1">梁朝伟回应私生子传闻 自曝与刘嘉玲婚姻现况</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060629.md#1">宁静曝行业乱象：没几个导演敢用演技好的演员</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14061312.md#1">受《好声音》负评波及 唐嫣录综艺节目惹议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14061231.md#1">李玟生前控诉引爆舆论 《好声音》暂停播出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14061213.md#1">佐藤麻衣恢单后首复工 访台宣告回归演艺圈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060846.md#1">如何减少痛感？ 美CIA解密文件曝生活秘技</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058593.md#1">静脉曲张可致栓塞命危 1动作促血液回流 中医4招改善</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060472.md#1">能量饮料让你提神？5副作用伤大脑 这类人要小心</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/25/n14061029.md#1">如何阻止小狗对邮差吠叫？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/15/n14054376.md#1">四孔钮扣如何缝？必学手缝针法一次看</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14129958.md#1">威赫西域的汉宣帝 一道柔情诏书显露夫妻的恩义</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14133709.md#1">【未解之谜】《推背图》47象 紫薇圣人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14131208.md#1">莫愁女 诗歌里永不老去的佳人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127127.md#1">奉天命助圣王治世 百日为相白马化龙（上）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/21/n13594978.md#1">【器乐独奏与协奏曲】布鲁赫《苏格兰幻想曲》，作品第46号</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137533.md#1">【车评】最实惠欧洲SUV  2024 Volkswagen Atlas SEL Premium R-Line</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/16/n14137659.md#1">【全球新闻】大陆医生：中共病毒感染爆发式增长</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14136995.md#1">【中国禁闻】亲信旧部纷被抓 赵乐际遭围剿？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136615.md#1">中共央视新闻播出辱习画面 后紧急删除</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135839.md#1">很梦幻？Costco新版购物车引发会员热议</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135801.md#1">周海媚死讯不断反转 堪称现实版《新闻女王》</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136609.md#1">范冰冰竹林虎啸礼服入选CNN十大红毯造型</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135870.md#1">10年前拍完未播 周海媚遗作遭拍卖原因曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136694.md#1">解约香港无线4个月 王晶之女王子涵曝新动向</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14135921.md#1">与周海媚合演《倚天屠龙记》 马景涛写信悼念</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：儿童专属梦幻公主帐篷 63%折扣</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">FIJI天然自流瓶装水 不含8 种主要过敏原</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135019.md#1">苹果防糖尿病、阻癌细胞扩散 品种、吃法全攻略</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/1/n14128227.md#1">掉发怎么办？中医6招教你长回浓密秀发</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136611.md#1">已逝明星患的是终生疾病？关于红斑狼疮一篇看懂</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/27/n14061878.htm">嘉市家庭可支配所得连4年破百万 再创新高</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061878.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
